# hermes-xiaoxi

./: .gitignore  CHANGELOG.md  analysis-zh.md  analysis.md  ap_simulator.py  changelog.html  embodied-ai-roadmap.md  esp-claw-analysis.md  firmware-architecture.md  firmware-module-plan.md  mesh_client.py  mesh_loop.py  mesh_test.py  oled_128x32.lua  oled_fix.lua  product-architecture-en.html  product-architecture-en.md  product-architecture.html  product-lineup-en.md  product-lineup.md  send_lua.py  send_oled.lua  ssd1306_control.lua  xiaoqing-app-architecture.html  xiaoqing_mesh_client.py  xiaozhi-pinout-vs-espclaw.md
.cursor/: mcp.json
scripts/: download-models.sh
task-dispatcher/: config.yaml  dispatcher.py  models.py  storage.py  web_agents.py  web_servers.py
task-dispatcher/data/: dispatcher.db
xiaoqing-app/: .flutter-plugins  README.md  pubspec.yaml
xiaoxi-firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
xiaoxi-firmware/main/: CMakeLists.txt  idf_component.yml  main.cc
xiaoxi-firmware/main/audio/: audio_codec.cc  audio_pipeline.cc  audio_pipeline.h  board_bridge.h
xiaoxi-firmware/main/audio/codecs/: es8388_audio_codec.cc  no_audio_codec.cc
xiaoxi-firmware/main/audio/wake_words/: esp_wake_word.cc
xiaoxi-firmware/main/comm/: comm.cc  comm.h  wifi_manager.cc
xiaoxi-firmware/main/core/: application.cc  application.h  config.cc  config.h  event_bus.cc  event_bus.h  session.cc  session.h  state_machine.cc  state_machine.h  voice_chain.cc  voice_chain.h
xiaoxi-firmware/main/hal/: board.cc  board.h
xiaoxi-firmware/main/motion/: actuator.cc  actuator.h
xiaoxi-firmware/main/output/: output.cc  output.h
xiaoxi-firmware/main/sensors/: radar.cc  radar.h
xiaoxi-firmware/main/stubs/: assets.h  board.h  protocol.h  settings.h  system_info.h
xiaoxi-firmware/main/vision/: camera.cc  camera.h
xiaoxi-mesh/: .env.example  .gitignore  README.md  ROADMAP.md  agent_brain.py  agent_runner.py  app_state.py  audit.py  auth.py  client.py  codebuddy_bridge.py  config.yaml  decision_engine.py  dependencies.py  executors.py  main.py  models.py  permissions.py  requirements.txt  server.py  start_codebuddy_bridge.bat  storage.py  tokens.md  web_ui.py  websocket_handler.py  xiaoxi-mesh.service
(+85 files in other folders)
